--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.0",
+    "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-navigation/native": "^6.1.17",
+    "expo": "^51.0.8",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "react-native-dotenv": "^3.4.11",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
